fixed visibility of panels on the desktop

--- a/DTCD-WorkspaceSystem/src/styles/panel.css
+++ b/DTCD-WorkspaceSystem/src/styles/panel.css
@@ -33,7 +33,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: 1500;
+  z-index: 8;
   background-color: var(--button_primary_12);
   opacity: 0.7;
 }
@@ -43,7 +43,7 @@
   justify-content: flex-end;
   align-items: center;
   position: absolute;
-  z-index: 2000;
+  z-index: 9;
   width: 100%;
   height: 44px;
 }
@@ -101,5 +101,5 @@
   cursor: pointer;
 }
 .ui-resizable-handle {
-  z-index: 1500 !important;
+  z-index: 9 !important;
 }
